2004-11-06  Per Bothner  <per@bothner.com>

	* XName.java (<init>): New constructor.
	(lookupPrefix): Rename to lookupNamespaceURI for consistency with DOM3.
	* ParsedXMLToConsumer.java (closeStartTag): Use new XName constructor.
	* NodeTree.java (posIsDefaultNamespace, posLookupNamespaceURI,
	posLookupPrefix): New methods.
	(posLocalName): Fall back to getNextTypeName.

2004-05-20  Per Bothner  <per@bothner.com>

	* NodeTree.java (posTarget):  New method.

2004-05-18  Per Bothner  <per@bothner.com>

	* XMLPrinter.java:  Add pretty-printing support.

2004-05-05  Per Bothner  <per@bothner.com>

	* ParsedXMLHandler.java.in (emitCDATA):  New method.
 	* ParsedXMLToConsumer.java (emitCDATA):  New method.
	* XMLParser.java.in (parse):  Call emitCDATA if we saw CDATA.
	* XMLPrinter.java (writeCDATA):  New method.

2004-04-18  Per Bothner  <per@bothner.com>

	* ParsedXMLToConsumer.java (emitComment, emitProcessingInstruction):
	Pass on if base is XConsumer.
	* XMLPrinter.java:  Implement XConsumer.
	(writeBaseUri, writeComment, writeProcessingInstruction):  New methods.

	* XMLPrinter.java (needXMLdecl):  New field.
	(beinDocument):  Don't emit XML decl yet, include it comes later
	as a processing instruction.  Instead set needXMLdecl.
	(closeTag):  Emit XML declaration if needXMLdecl is set.

	* NamespaceBinding.java (resolve):  New method.
	* XMLPrinter.java (beginGroup):  Check we haven't emitted namespace
	declaration yet in this beginGroup.

2004-01-12  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (beginDocument):  New method - print XML declaration.

2004-01-04  Per Bothner  <per@bothner.com>

	* NodeTree (getIteratorAtPos):  New method.
	(posNamespaceURI, posPrefix, posLocalName, posFirstChild,
	posHasAttributes):  New DOM-like methods.

2003-12-24  Per Bothner  <per@bothner.com>

	* XName.java:  Implement Externalizable.
	(writeExternal, readExternal):  New methods.
	(setQName, getNamespaceNodes, setNamespaceNodes):  New methods.