@@ -13,6 +13,7 @@ java_sources = \
   NamedChildrenFilter.java \
   NamespaceBinding.java \
   NodeTree.java \
+  SName.java \
   XMLPrinter.java \
   XName.java \
   ParsedXMLToConsumer.java
